--- a/package.json
+++ b/package.json
@@ -9,21 +9,38 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.11",
+    "@ai-sdk/react": "^2.0.22",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "ai": "^5.0.22",
+    "class-variance-authority": "^0.7.1",
+    "fumadocs-core": "15.7.2",
+    "fumadocs-mdx": "11.8.0",
+    "fumadocs-ui": "15.7.2",
+    "hast-util-to-jsx-runtime": "^2.3.6",
+    "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "fumadocs-ui": "15.7.2",
-    "fumadocs-core": "15.7.2",
-    "fumadocs-mdx": "11.8.0"
+    "react-medium-image-zoom": "^5.3.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/mdx": "^2.0.13",
     "@types/node": "24.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
-    "typescript": "^5.9.2",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.12",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "postcss": "^8.5.6"
+    "typescript": "^5.9.2"
   }
 }
