--- a/package.json
+++ b/package.json
@@ -11,26 +11,62 @@
   "dependencies": {
     "@ai-sdk/openai-compatible": "^1.0.11",
     "@ai-sdk/react": "^2.0.22",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "ai": "^5.0.22",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "15.7.2",
     "fumadocs-mdx": "11.8.0",
+    "fumadocs-twoslash": "^3.1.6",
     "fumadocs-ui": "15.7.2",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-medium-image-zoom": "^5.3.0",
+    "react-resizable-panels": "^3.0.5",
+    "recharts": "2.15.4",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-rehype": "^11.1.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "twoslash": "^0.3.4",
+    "vaul": "^1.1.2",
     "zod": "^4.1.1"
   },
   "devDependencies": {
@@ -41,6 +77,7 @@
     "@types/react-dom": "^19.1.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
   }
 }
