--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "twoslash": "^0.3.4",
+    "@untitled-ui/icons-react": "^0.1.4",
     "vaul": "^1.1.2",
     "zod": "^4.1.1"
   },
