--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "mermaid": "^11.6.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
